--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,5 +1,11 @@
 <h1>All Wikis</h1>
 
+<% if user_signed_in? %>
+  <div class="col-md-4">
+    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+  </div>
+<% end %>
+
 <% @wikis.each do |wiki| %>
   <p>
     <%= link_to wiki.title, wiki %>
