--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 <% if user_signed_in? %>
   Signed in as: <strong><%= current_user.email %></strong> |
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  <% if current_user.premium? %>
+    <%= link_to "Downgrade", users_downgrade_path(current_user), method: :put, class: 'btn btn-warning', data: {confirm: 'Are you sure you want to downgrade?'} %>
+  <% end %>
 <% else %>
 # #2
   <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
