--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -11,6 +11,7 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
+      <%= render partial: 'form', locals: { f: f } %>
       <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
