--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -2,19 +2,6 @@
 
 <div class="row">
   <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter wiki title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
-      </div>
-      <%= render partial: 'form', locals: { f: f } %>
-      <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+    <%= render partial: 'form' %>
   </div>
 </div>
