--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -8,6 +8,6 @@
 
 <% @wikis.each do |wiki| %>
   <p>
-    <%= link_to wiki.title, wiki %>
+    <%= link_to markdown(wiki.title), wiki %>
   </p>
 <% end %>
