--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -2,6 +2,12 @@
 
  <div class="row">
    <div class="col-md-8">
-      <%= render partial: 'form' %>
+    <%= render partial: 'form' %>
    </div>
+
+   <div class="col-md-8">
+      <h3>Add Collaborator</h3>
+      <%= render partial: 'collaborators/form', locals: { wiki: @wiki } %>
+   </div>
+
  </div>
