--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,6 +3,19 @@
   <div class="col-md-8">
     <p><%= markdown(@wiki.body) %></p>
   </div>
+  <div class="col-md-8">
+    <% if @wiki.collaborators.empty? %>
+      <h2>Collaborators</h2>
+      <p>
+        <% @wiki.collaborators.each do |collaborator| %>
+          <h4><%= collaborator.user.email %></h4>
+        <% end %>
+      </p>
+      <% if @wiki.user == current_user %>
+        <%= link_to "Delete", collaborator_path, method: :delete, class: 'glyphicon glyphicon-remove' %>
+      <% end %>
+    <% end %>
+  </div>
   <div class="col-md-4">
     <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
     <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
