--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,13 +1,14 @@
 <h1>Edit Wiki</h1>
 
  <div class="row">
-   <div class="col-md-8">
+  <div class="col-md-8">
     <%= render partial: 'form' %>
-   </div>
-
-   <div class="col-md-8">
+  </div>
+  <% if current_user == @wiki.user || current_user.admin? %>
+    <div class="col-md-8">
       <h3>Add Collaborator</h3>
       <%= render partial: 'collaborators/form', locals: { wiki: @wiki } %>
-   </div>
+    </div>
+  <% end %>
 
  </div>
